--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -50,12 +50,11 @@
 
     [Parameter] public Race? Race { get; set; }
     [Parameter] public long SeasonId { get; set; }
-    [Parameter] public int IncomingRound { get; set; }
-    [Parameter] public int DefaultRaceLength { get; set; }
     [Parameter] public List<Climate> Climates { get; set; }
 
     MudChip? climateChip;
     bool variableRaceLength;
+    int backupRaceLength;
     List<string> errorValidations = new();
 
     EditRaceModel model;
@@ -66,9 +65,10 @@
 
         if (model.Id == 0)
         {
-            model.Round = IncomingRound;
-            model.RaceLength = DefaultRaceLength;
+            throw new InvalidOperationException("Can only edit races, not create");
         }
+
+        backupRaceLength = model.RaceLength;
 
         if (model.ClimateId == 0)
             model.ClimateId = Climates.TakeRandomClimate().Id;
@@ -80,6 +80,9 @@
             model.ClimateId = (long)climateChip.Value;
         else if (model.ClimateId == 0)
             model.ClimateId = Climates.TakeRandomClimate().Id;
+
+        if (!variableRaceLength)
+            model.RaceLength = backupRaceLength;
 
         var validations = model.RunValidations();
         if (validations.Any())
