And a small addition

--- a/SimTECH/SimTECH/Pages/Season/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Season/Landing.razor
@@ -88,7 +88,7 @@
                 <MudSpacer />
 
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary" Size="Size.Small">
-                    <MudButton FullWidth="true" OnClick="ShowComponentUsage">Components</MudButton>
+                    <MudButton FullWidth="true" OnClick="OnShowComponentUsage">Components</MudButton>
                     <MudButton FullWidth="true" OnClick="ShowQualyBattles">Q.Battles</MudButton>
                 </MudButtonGroup>
             </MudStack>
