--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -336,7 +336,8 @@
 
     private async Task SetActiveRaceClass(long raceClassId)
     {
-        
+        // If this is it, then we could use a bind
+        OverviewModel.ActiveClassId = raceClassId;
     }
 
     private async Task AddRaces()
